Finished parametrizing all of the Keycloak Saml Options

--- a/templates/keycloak-saml.xml.j2
+++ b/templates/keycloak-saml.xml.j2
@@ -2,39 +2,40 @@
                        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
                        xsi:schemaLocation="urn:keycloak:saml:adapter http://www.keycloak.org/schema/keycloak_saml_adapter_1_7.xsd">
     <SP entityID="{{ TOMCAT_SAML_SP_ENTITY_ID }}"
-        sslPolicy="EXTERNAL"
-        logoutPage="/logout.jsp"
-        nameIDPolicyFormat="urn:oasis:names:tc:SAML:1.1:nameid-format:unspecified"
-        forceAuthentication="true">
+        logoutPage="{{ TOMCAT_SAML_SP_LOGOUT_PAGE | default('/logout.jsp') }}"
+        {% if TOMCAT_SAML_SP_SSL_POLICY is defined %}sslPolicy="{{ TOMCAT_SAML_SP_SSL_POLICY }}"{% endif %}    
+        {% if TOMCAT_SAML_SP_NAME_ID_POLICY_FORMAT is defined %}nameIDPolicyFormat="{{ TOMCAT_SAML_SP_NAME_ID_POLICY_FORMAT }}"{% endif %}
+        {% if TOMCAT_SAML_SP_FORCE_AUTH is defined %}forceAuthentication="{{ TOMCAT_SAML_SP_FORCE_AUTH }}"{% endif %}
+        {% if TOMCAT_SAML_SP_IS_PASSIVE is defined %}isPassive="{{ TOMCAT_SAML_SP_IS_PASSIVE }}"{% endif %}
+        >
         <Keys>
-            <Key signing="{{ TOMCAT_SAML_SP_SIGN | default('false') }}">
+            {% if TOMCAT_SAML_SP_KEY is defined or TOMCAT_SAML_SP_CERT is defined %}
+            <Key signing="{{ TOMCAT_SAML_SP_SIGN_KEY | default('true') }}" encryption="{{ TOMCAT_SAML_SP_ENCR_KEY | default('false') }}">
                 {% if TOMCAT_SAML_SP_KEY is defined %}<PrivateKeyPem>{{ TOMCAT_SAML_SP_KEY }}</PrivateKeyPem>{% endif %}
                 {% if TOMCAT_SAML_SP_CERT is defined %}<CertificatePem>{{ TOMCAT_SAML_SP_CERT }}</CertificatePem>{% endif %}
             </Key>
+            {% endif %}
         </Keys>
-        <PrincipalNameMapping policy="FROM_NAME_ID"/>
+        <PrincipalNameMapping policy="{{ TOMCAT_SAML_SP_NAME_MAP_POLICY | default('FROM_NAME_ID') }}" {% if TOMCAT_SAML_SP_NAME_MAP_ATTR is defined %}attribute="{{ TOMCAT_SAML_SP_NAME_MAP_ATTR }}"{% endif %}/>
         <RoleIdentifiers>
-            <Attribute name="Role"/>
+            <Attribute name="{{ TOMCAT_SAML_SP_ROLE_ATTR | default('Role') }}"/>
         </RoleIdentifiers>
-        <IDP entityID="{{ TOMCAT_SAML_IDP_ENTITY_ID }}">
-            <SingleSignOnService signRequest="false"
-                                 validateResponseSignature="false"
-                                 requestBinding="REDIRECT"
-                                 responseBinding="REDIRECT"
-                                 bindingUrl="{{ TOMCAT_SAML_IDP_BINDING_URL }}" />
+        <IDP entityID="{{ TOMCAT_SAML_IDP_ENTITY_ID }}"
+             metadataUrl="{{ TOMCAT_SAML_IDP_META_URL }}">
+            <SingleSignOnService signRequest="{{ TOMCAT_SAML_IDP_SIGN_REQ | default('false') }}"
+                                 validateResponseSignature="{{ TOMCAT_SAML_IDP_SIGN_REQ | default('false') }}"
+                                 requestBinding="{{ TOMCAT_SAML_IDP_REQ_BIND | default('POST') }}"
+                                 responseBinding="{{ TOMCAT_SAML_IDP_REP_BIND | default('POST') }}"
+                                 bindingUrl="{{ TOMCAT_SAML_IDP_SSO_BIND_URL }}" />
 
-            <SingleLogoutService validateRequestSignature="false"
-                                 validateResponseSignature="false"
-                                 signRequest="false"
-                                 signResponse="false"
-                                 requestBinding="REDIRECT"
-                                 responseBinding="REDIRECT"
-                                 redirectBindingUrl="{{ TOMCAT_SAML_IDP_LOGOUT_BINDING_URL }}" />
-            <Keys>
-                <Key signing="{{ TOMCAT_SAML_IDP_SIGN | default('false') }}">
-                    {% if TOMCAT_SAML_IDP_CERT is defined %}<CertificatePem>{{ TOMCAT_SAML_IDP_CERT }}</CertificatePem>{% endif %}
-                </Key>
-            </Keys>
+            <SingleLogoutService validateRequestSignature="{{ TOMCAT_SAML_IDP_SIGN_REQ | default('false') }}"
+                                 validateResponseSignature="{{ TOMCAT_SAML_IDP_SIGN_REQ | default('false') }}"
+                                 signRequest="{{ TOMCAT_SAML_IDP_SIGN_REQ | default('false') }}"
+                                 signResponse="{{ TOMCAT_SAML_IDP_SIGN_REQ | default('false') }}"
+                                 requestBinding="{{ TOMCAT_SAML_IDP_REQ_BIND | default('POST') }}"
+                                 responseBinding="{{ TOMCAT_SAML_IDP_REP_BIND | default('POST') }}"
+                                 postBindingUrl="{{ TOMCAT_SAML_IDP_SLS_BIND_URL }}"
+                                 redirectBindingUrl="{{ TOMCAT_SAML_IDP_SLS_BIND_URL }}" />
         </IDP>
     </SP>
 </keycloak-saml-adapter>
