--- a/templates/keycloak-saml.xml.j2
+++ b/templates/keycloak-saml.xml.j2
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <keycloak-saml-adapter xmlns="urn:keycloak:saml:adapter"
                        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
                        xsi:schemaLocation="urn:keycloak:saml:adapter http://www.keycloak.org/schema/keycloak_saml_adapter_1_7.xsd">
