--- a/templates/keycloak-saml.xml.j2
+++ b/templates/keycloak-saml.xml.j2
@@ -37,6 +37,13 @@
                                  responseBinding="{{ KEYCLOAK_SAML_IDP_REP_BIND | default('POST') }}"
                                  postBindingUrl="{{ KEYCLOAK_SAML_IDP_SLS_BIND_URL }}"
                                  redirectBindingUrl="{{ KEYCLOAK_SAML_IDP_SLS_BIND_URL }}" />
+            <Keys>
+                {% if KEYCLOAK_SAML_IDP_CERT is defined %}
+                <Key signing="true">
+                    {% if KEYCLOAK_SAML_IDP_CERT is defined %}<CertificatePem>{{ KEYCLOAK_SAML_IDP_CERT }}</CertificatePem>{% endif %}
+                </Key>
+                {% endif %}
+            </Keys>
         </IDP>
     </SP>
 </keycloak-saml-adapter>
