--- a/templates/server.xml.j2
+++ b/templates/server.xml.j2
@@ -75,7 +75,7 @@
                sslEnabledProtocols="{{ TOMCAT_SSL_ENABLED_PROTOCOLS | default ('TLSv1.2,TLSv1.3') }}"
                keyAlias="{{ TOMCAT_KEY_ALIAS | default('') }}"
                keystoreFile="{{ TOMCAT_KEYSTORE_FILE | default('') }}"
-               keystorePass="{{ TOMCAT_KEYSTORE_PASS | default('') }}"
+               keystorePass="{{ TOMCAT_KEYSTORE_PASSWORD | default('') }}"
                keystoreType="{{ TOMCAT_KEYSTORE_TYPE| default('JKS') }}"     
                
                proxyName="{{ TOMCAT_PROXY_NAME | default('') }}"
