--- a/templates/server.xml.j2
+++ b/templates/server.xml.j2
@@ -19,12 +19,13 @@
      define subcomponents such as "Valves" at this level.
      Documentation at /docs/config/server.html
  -->
-<Server port="8005" shutdown="SHUTDOWN">
+<Server port="-1" shutdown="SHUTDOWN">
   <Listener className="org.apache.catalina.startup.VersionLoggerListener" />
   <!-- Security listener. Documentation at /docs/config/listeners.html
   <Listener className="org.apache.catalina.security.SecurityListener" />
   -->
   <!--APR library loader. Documentation at /docs/apr.html -->
+  <!-- FIPSMode is required for STIG -->
   <Listener className="org.apache.catalina.core.AprLifecycleListener" SSLEngine="on" FIPSMode="{{ TOMCAT_FIPS_MODE | default('on') }}"/>
   <!-- Prevent memory leaks due to use of particular java/javax APIs-->
   <Listener className="org.apache.catalina.core.JreMemoryLeakPreventionListener" />
@@ -81,7 +82,7 @@
                proxyName="{{ TOMCAT_PROXY_NAME | default('') }}"
                proxyPort="{{ TOMCAT_PROXY_PORT | default('') }}"
                scheme="{{ TOMCAT_SCHEME | default('http') }}"
-               secure="{{ TOMCAT_SECURE | default('false') }}"/>
+               secure="{{ TOMCAT_SECURE | default('false') }}" />
     <!-- A "Connector" using the shared thread pool-->
     <!--
     <Connector executor="tomcatThreadPool"
@@ -153,7 +154,8 @@
 
       <!-- Use the LockOutRealm to prevent attempts to guess user passwords
            via a brute-force attack -->
-      <Realm className="org.apache.catalina.realm.LockOutRealm">
+      <!-- Required per STIG V-222980, V-222981 -->
+      <Realm className="org.apache.catalina.realm.LockOutRealm" failureCount="5" lockOutTime="600">
         <!-- This Realm uses the UserDatabase configured in the global JNDI
              resources under the key "UserDatabase".  Any edits
              that are performed against this UserDatabase are immediately
@@ -176,8 +178,11 @@
              Note: The pattern used is equivalent to using pattern="common" -->
         <Valve className="org.apache.catalina.valves.AccessLogValve" directory="logs"
                prefix="localhost_access_log" suffix=".txt"
-               pattern="%h %l %u %t &quot;%r&quot; %s %b" />
-
+               pattern="%h %l %u %t %h &quot;%r&quot; %s %b"
+               requestAttributesEnabled="true" />
+          
+        <!-- Required for STIG V-222975, V-222977 -->
+        <Valve className="org.apache.catalina.valves.ErrorReportValve" showServerInfo="false" showReport="false"/>
       </Host>
     </Engine>
   </Service>
