--- a/templates/server.xml.j2
+++ b/templates/server.xml.j2
@@ -173,12 +173,14 @@
         <Valve className="org.apache.catalina.authenticator.SingleSignOn" />
         -->
 
+        <Valve className="org.apache.catalina.valves.RemoteIpValve"/>
+
         <!-- Access log processes all example.
              Documentation at: /docs/config/valve.html
              Note: The pattern used is equivalent to using pattern="common" -->
         <Valve className="org.apache.catalina.valves.AccessLogValve" directory="logs"
                prefix="localhost_access_log" suffix=".txt"
-               pattern="%h %l %u %t %h &quot;%r&quot; %s %b"
+               pattern="%h %l %u %t &quot;%r&quot; %s %b"
                requestAttributesEnabled="true" />
           
         <!-- Required for STIG V-222975, V-222977 -->
